Updated the codeowner file

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,3 @@
-* @blv-dominik
+* @belvo-finance-opensource/documentation
+* @belvo-finance-opensource/experience
+* @belvo-finance-opensource/frontend
