Updated CodeOwners file

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,1 @@
-* @belvo-finance-opensource/documentation
-* @belvo-finance-opensource/experience
-* @belvo-finance-opensource/frontend
+* @belvo-finance-opensource/documentation @belvo-finance-opensource/experience @belvo-finance-opensource/frontend
